[package]
name = "stlto3mf"
authors = ["Michał Papierski <michal@papierski.net>"]
license-file = "LICENSE"
homepage = "https://github.com/mpapierski/stlto3mf"
description = "Converts one or more STL files into a single 3MF file."
version = "0.1.0"
edition = "2021"

[dependencies]
threemf = "0.5.0"
stl_io = "0.7.0"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
